docs/7.57/md/abenoperator_glosry.md
---
title: "operator_glosry"
description: |
  operator_glosry - ABAP 7.57 language reference documentation
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperator_glosry.htm"
abapFile: "abenoperator_glosry.htm"
keywords: ["do", "if", "try", "data", "abenoperator", "glosry"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_glossary.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: operator, ABENOPERATOR_GLOSRY, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestio
n for improvement:)

operator

Component of an [ABAP statement](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_statement_glosry.htm "Glossary Entry") or of a [CDS data definition](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_data_definition_glosry.htm "Glossary Entry") that, when combined with [operands](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperand_glosry.htm "Glossary Entry"), forms an [expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexpression_glosry.htm "Glossary Entry"). When the statement is executed, an operation is executed for two operands connected by one operator, and the result is processed further in the statement. There are [arithmetic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_operator_glosry.htm "Glossary Entry"), [bit](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbit_operator_glosry.htm "Glossary Entry"), [string](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_operator_glosry.htm "Glossary Entry"), [Boolean](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenboolean_operator_glosry.htm "Glossary Entry"), [relational](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrel_operator_glosry.htm "Glossary Entry"), and [assignment operators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenassignment_operator_glosry.htm "Glossary Entry"). There are also operators that do not combine operands, but perform other operations in [operand positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperand_position_glosry.htm "Glossary Entry"). Operators of this type are the [dereferencing operator](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendereferencing_operat_glosry.htm "Glossary Entry"), [declarations operators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendeclaration_operator_glosry.htm "Glossary Entry"), and [constructor operators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconstructor_operator_glosry.htm "Glossary Entry"). Finally, the [literal operator](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenassignment_operator_glosry.htm "Glossary Entry") is used to combine two [literals](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_literal_glosry.htm "Glossary Entry").

[→ More about](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoperators.htm)